clearer start white

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     const generateConicGradient = (binary) => {
       let ddegs = 360 / binary.length - 4;
-      let inner = '#844 0deg 2deg';
+      let inner = '#a88 0deg 2deg';
       let degs = 2;
       let index = 0;
       while (index < binary.length) {
@@ -99,6 +99,6 @@
 
     updateBinary();
 
-    setInterval(updateBinary, 10); // 100 times per second to be accurate
+    setInterval(updateBinary, 10);
   </script>
 </html>
