--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     const generateConicGradient = (binary) => {
       let ddegs = 360 / binary.length - 4;
-      let inner = '#a88 0deg 2deg';
+      let inner = '#baa 0deg 2deg';
       let degs = 2;
       let index = 0;
       while (index < binary.length) {
