--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      flex-direction: column;
       height: 100vh;
       height: 100svh;
       background-color: #222;
@@ -29,15 +30,15 @@
       top: 50%;
       left: 50%;
       transform: translateX(-50%) translateY(-50%);
-      width: 85%;
-      height: 87%;
+      height: calc(95% - 1rem);
+      width: calc(93% - 1rem);
       background-color: #222;
       border-radius: 50%;
     }
 
-    .seconds,
-    .minutes {
-      transform: translateX(-50%) translateY(-50%) rotate(33deg);
+    .minutes,
+    .seconds {
+      transform: translateX(-50%) translateY(-50%) rotate(0deg);
     }
   </style>
 
@@ -68,7 +69,7 @@
 
     const generateConicGradient = (binary) => {
       let ddegs = 360 / binary.length - 4;
-      let inner = '#baa 0deg 2deg';
+      let inner = '#222 0deg 2deg';
       let degs = 2;
       let index = 0;
       while (index < binary.length) {
